// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Viewer Should match the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Viewer
    animation={
      Object {
        "delay": "0s",
        "direction": "normal",
        "duration": "1.5s",
        "fillMode": "forwards",
        "iterationCount": "1",
        "name": "slideInX",
        "timingFunction": "ease",
      }
    }
    currentAnimation="slideInX"
    loadNewAnimation={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "keyframes": Object {
                "name": "slideInX",
                "sections": Array [
                  Object {
                    "label": "0%",
                    "name": "0%",
                    "properties": Array [
                      Object {
                        "name": "transform",
                        "value": "translateX(-300px)",
                      },
                    ],
                  },
                  Object {
                    "label": "100%",
                    "name": "100%",
                    "properties": Array [
                      Object {
                        "name": "transform",
                        "value": "translateX(0px)",
                      },
                    ],
                  },
                ],
              },
              "properties": Object {
                "delay": "0s",
                "direction": "normal",
                "duration": "1.5s",
                "fillMode": "forwards",
                "iterationCount": "1",
                "name": "slideInX",
                "timingFunction": "ease",
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="current-animation-label"
        >
          *
          slideInX
          *
        </h2>,
        <div
          className="viewer-container"
        >
          <div
            className="viewer"
          >
            <div
              className="square square-0"
              onAnimationEnd={[Function]}
              style={Object {}}
            >
              <h4
                className="main-title"
              >
                ani
                <span>
                  Mate
                </span>
              </h4>
            </div>
          </div>
        </div>,
        <div
          className="editor-bottom-btns-container"
        >
          <button
            className="lower-btn play-btn"
            disabled={false}
            onClick={[Function]}
          >
            play
          </button>
          <button
            className="lower-btn stop-btn"
            disabled={true}
            onClick={[Function]}
          >
            stop
          </button>
        </div>,
      ],
      "className": "viewer-component",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "*",
            "slideInX",
            "*",
          ],
          "className": "current-animation-label",
        },
        "ref": null,
        "rendered": Array [
          "*",
          "slideInX",
          "*",
        ],
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="viewer"
          >
            <div
              className="square square-0"
              onAnimationEnd={[Function]}
              style={Object {}}
            >
              <h4
                className="main-title"
              >
                ani
                <span>
                  Mate
                </span>
              </h4>
            </div>
          </div>,
          "className": "viewer-container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="square square-0"
              onAnimationEnd={[Function]}
              style={Object {}}
            >
              <h4
                className="main-title"
              >
                ani
                <span>
                  Mate
                </span>
              </h4>
            </div>,
            "className": "viewer",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h4
                className="main-title"
              >
                ani
                <span>
                  Mate
                </span>
              </h4>,
              "className": "square square-0",
              "onAnimationEnd": [Function],
              "style": Object {},
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "ani",
                  <span>
                    Mate
                  </span>,
                ],
                "className": "main-title",
              },
              "ref": null,
              "rendered": Array [
                "ani",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Mate",
                  },
                  "ref": null,
                  "rendered": "Mate",
                  "type": "span",
                },
              ],
              "type": "h4",
            },
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <button
              className="lower-btn play-btn"
              disabled={false}
              onClick={[Function]}
            >
              play
            </button>,
            <button
              className="lower-btn stop-btn"
              disabled={true}
              onClick={[Function]}
            >
              stop
            </button>,
          ],
          "className": "editor-bottom-btns-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "play",
              "className": "lower-btn play-btn",
              "disabled": false,
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "play",
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "stop",
              "className": "lower-btn stop-btn",
              "disabled": true,
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "stop",
            "type": "button",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="current-animation-label"
          >
            *
            slideInX
            *
          </h2>,
          <div
            className="viewer-container"
          >
            <div
              className="viewer"
            >
              <div
                className="square square-0"
                onAnimationEnd={[Function]}
                style={Object {}}
              >
                <h4
                  className="main-title"
                >
                  ani
                  <span>
                    Mate
                  </span>
                </h4>
              </div>
            </div>
          </div>,
          <div
            className="editor-bottom-btns-container"
          >
            <button
              className="lower-btn play-btn"
              disabled={false}
              onClick={[Function]}
            >
              play
            </button>
            <button
              className="lower-btn stop-btn"
              disabled={true}
              onClick={[Function]}
            >
              stop
            </button>
          </div>,
        ],
        "className": "viewer-component",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "*",
              "slideInX",
              "*",
            ],
            "className": "current-animation-label",
          },
          "ref": null,
          "rendered": Array [
            "*",
            "slideInX",
            "*",
          ],
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="viewer"
            >
              <div
                className="square square-0"
                onAnimationEnd={[Function]}
                style={Object {}}
              >
                <h4
                  className="main-title"
                >
                  ani
                  <span>
                    Mate
                  </span>
                </h4>
              </div>
            </div>,
            "className": "viewer-container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="square square-0"
                onAnimationEnd={[Function]}
                style={Object {}}
              >
                <h4
                  className="main-title"
                >
                  ani
                  <span>
                    Mate
                  </span>
                </h4>
              </div>,
              "className": "viewer",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h4
                  className="main-title"
                >
                  ani
                  <span>
                    Mate
                  </span>
                </h4>,
                "className": "square square-0",
                "onAnimationEnd": [Function],
                "style": Object {},
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "ani",
                    <span>
                      Mate
                    </span>,
                  ],
                  "className": "main-title",
                },
                "ref": null,
                "rendered": Array [
                  "ani",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Mate",
                    },
                    "ref": null,
                    "rendered": "Mate",
                    "type": "span",
                  },
                ],
                "type": "h4",
              },
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <button
                className="lower-btn play-btn"
                disabled={false}
                onClick={[Function]}
              >
                play
              </button>,
              <button
                className="lower-btn stop-btn"
                disabled={true}
                onClick={[Function]}
              >
                stop
              </button>,
            ],
            "className": "editor-bottom-btns-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "play",
                "className": "lower-btn play-btn",
                "disabled": false,
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "play",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "stop",
                "className": "lower-btn stop-btn",
                "disabled": true,
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "stop",
              "type": "button",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Viewer Should match the snapshot if no animation 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Viewer
    animation=""
    currentAnimation="slideInX"
    loadNewAnimation={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "keyframes": Object {
                "name": "slideInX",
                "sections": Array [
                  Object {
                    "label": "0%",
                    "name": "0%",
                    "properties": Array [
                      Object {
                        "name": "transform",
                        "value": "translateX(-300px)",
                      },
                    ],
                  },
                  Object {
                    "label": "100%",
                    "name": "100%",
                    "properties": Array [
                      Object {
                        "name": "transform",
                        "value": "translateX(0px)",
                      },
                    ],
                  },
                ],
              },
              "properties": Object {
                "delay": "0s",
                "direction": "normal",
                "duration": "1.5s",
                "fillMode": "forwards",
                "iterationCount": "1",
                "name": "slideInX",
                "timingFunction": "ease",
              },
            },
          ],
          Array [
            Object {
              "keyframes": Object {
                "name": "slideInX",
                "sections": Array [
                  Object {
                    "label": "0%",
                    "name": "0%",
                    "properties": Array [
                      Object {
                        "name": "transform",
                        "value": "translateX(-300px)",
                      },
                    ],
                  },
                  Object {
                    "label": "100%",
                    "name": "100%",
                    "properties": Array [
                      Object {
                        "name": "transform",
                        "value": "translateX(0px)",
                      },
                    ],
                  },
                ],
              },
              "properties": Object {
                "delay": "0s",
                "direction": "normal",
                "duration": "1.5s",
                "fillMode": "forwards",
                "iterationCount": "1",
                "name": "slideInX",
                "timingFunction": "ease",
              },
            },
          ],
          Array [
            Object {
              "keyframes": Object {
                "name": "slideInX",
                "sections": Array [
                  Object {
                    "label": "0%",
                    "name": "0%",
                    "properties": Array [
                      Object {
                        "name": "transform",
                        "value": "translateX(-300px)",
                      },
                    ],
                  },
                  Object {
                    "label": "100%",
                    "name": "100%",
                    "properties": Array [
                      Object {
                        "name": "transform",
                        "value": "translateX(0px)",
                      },
                    ],
                  },
                ],
              },
              "properties": Object {
                "delay": "0s",
                "direction": "normal",
                "duration": "1.5s",
                "fillMode": "forwards",
                "iterationCount": "1",
                "name": "slideInX",
                "timingFunction": "ease",
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
